# restaurant-management-system-flask

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  docker-compose.yml  entrypoint.sh  models.py  pyproject.toml
flaskr/: __init__.py
flaskr/core/: config.py  extensions.py
flaskr/core/base/: services.py
flaskr/domains/category/: __init__.py  models.py  repositories.py  routes.py  services.py
flaskr/domains/orders/: __init__.py  models.py  repository.py  routes.py  services.py
flaskr/domains/product/: __init__.py  models.py  repositories.py  routes.py  services.py
flaskr/domains/role/: models.py
flaskr/domains/tables/: __init__.py  models.py  repositories.py  routes.py  services.py
flaskr/domains/user/: __init__.py  models.py  repositories.py  routes.py  services.py
migrations/versions/: 0d466483a4d2_add_user_table.py  1fee0e520d51_setup.py  41d63870a9c8_add_tables_table_to_new_column.py  4d535c67f0bf_added_order_model.py  63bed5f022af_added_category_model.py  6a49d4927c22_nullable_statemant_add_to_tables_table.py  8b6a9367fc90_.py  a0fcdad12a9f_added_product_model.py  e435648903d3_add_to_tables_domains.py
